2006-09-01  Rodney Dawes  <dobey@novell.com>

	* scripts/gnome-background-properties.py: Use Finish button on HEAD

	* scripts/gnome-passwd.py: Run the right program here

2006-08-24  Rodney Dawes  <dobey@novell.com>

	* scripts/gnome-*-properties.py:
	* scripts/gnome-*-preferences.py:
	Add some more scripts to scan for a11y properties in control-center

2006-08-21  Rodney Dawes  <dobey@novell.com>

	* python/A11yTestUtils.py: Add GPL notice into copyright header
	comment block

2006-08-18  Rodney Dawes  <dobey@novell.com>

	* INSTALL: Add content so automake doesn't overwrite the file

2006-08-18  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Determine the python site-packages path and substitute
	it for the Makefiles to use

	* find-python-path.py: Add this script to discover the python path

	* python/Makefile.am: Remove the pythondir declaration from here, as
	it is now defined by the configure script