@@ -14,6 +14,12 @@ guiexist (window_title)
 
 a11y_scan_window (window_title)
 	
+click (window_title, 'btnInstallTheme')
+a11y_scan_dialog ('dlgThemeInstallation', 'btnCancel')
+
+click (window_title, 'btnThemeDetails')
+a11y_scan_dialog ('dlgThemeDetails', 'btnClose')
+
 click (window_title, 'btnClose')
 
 a11y_test_shutdown ()
